--- a/.github/workflows/hakyll_gh_pages.yml
+++ b/.github/workflows/hakyll_gh_pages.yml
@@ -23,10 +23,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Build with Hakyll
-        uses: stephenswat/hakyll-build-pages@v1
-        with:
-          source: ./
-          destination: ./_site
+        uses: stephenswat/hakyll-build-pages@main
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
 
